parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> stmts
Rule 2     stmts -> statement stmts
Rule 3     stmts -> statement
Rule 4     statement -> INTDCL NAME ;
Rule 5     statement -> INTDCL NAME = expression ;
Rule 6     statement -> FLOATDCL NAME ;
Rule 7     statement -> FLOATDCL NAME = expression ;
Rule 8     statement -> BOOLDCL NAME ;
Rule 9     statement -> BOOLDCL NAME = boolexp ;
Rule 10    statement -> WHILE ( boolexp ) { stmts }
Rule 11    statement -> FOR ( statement boolexp ; statement ) { stmts }
Rule 12    statement -> PRINT expression ;
Rule 13    statement -> IF ( boolexp ) { stmts }
Rule 14    statement -> IF ( boolexp ) { stmts } ELSE { stmts }
Rule 15    elifstatement -> ELIF ( boolexp ) { stmts } elifstatement
Rule 16    elifstatement -> ELIF ( boolexp ) { stmts }
Rule 17    statement -> IF ( boolexp ) { stmts } elifstatement ELSE { stmts }
Rule 18    statement -> NAME = expression ;
Rule 19    expression -> ( expression )
Rule 20    expression -> expression + expression
Rule 21    expression -> expression - expression
Rule 22    expression -> expression * expression
Rule 23    expression -> expression / expression
Rule 24    expression -> expression ^ expression
Rule 25    boolexp -> expression GT expression
Rule 26    boolexp -> expression LT expression
Rule 27    boolexp -> expression GE expression
Rule 28    boolexp -> expression LE expression
Rule 29    boolexp -> expression EQ expression
Rule 30    boolexp -> expression NE expression
Rule 31    boolexp -> boolexp AND boolexp
Rule 32    boolexp -> boolexp OR boolexp
Rule 33    expression -> INUMBER
Rule 34    expression -> FNUMBER
Rule 35    expression -> boolexp
Rule 36    boolexp -> BOOLVAL
Rule 37    expression -> NAME

Terminals, with rules where they appear

(                    : 10 11 13 14 15 16 17 19
)                    : 10 11 13 14 15 16 17 19
*                    : 22
+                    : 20
-                    : 21
/                    : 23
;                    : 4 5 6 7 8 9 11 12 18
=                    : 5 7 9 18
AND                  : 31
BOOLDCL              : 8 9
BOOLVAL              : 36
ELIF                 : 15 16
ELSE                 : 14 17
EQ                   : 29
FLOATDCL             : 6 7
FNUMBER              : 34
FOR                  : 11
GE                   : 27
GT                   : 25
IF                   : 13 14 17
INTDCL               : 4 5
INUMBER              : 33
LE                   : 28
LT                   : 26
NAME                 : 4 5 6 7 8 9 18 37
NE                   : 30
OR                   : 32
PRINT                : 12
WHILE                : 10
^                    : 24
error                : 
{                    : 10 11 13 14 14 15 16 17 17
}                    : 10 11 13 14 14 15 16 17 17

Nonterminals, with rules where they appear

boolexp              : 9 10 11 13 14 15 16 17 31 31 32 32 35
elifstatement        : 15 17
expression           : 5 7 12 18 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30
prog                 : 0
statement            : 2 3 11 11
stmts                : 1 2 10 11 13 14 14 15 16 17 17

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . stmts
    (2) stmts -> . statement stmts
    (3) stmts -> . statement
    (4) statement -> . INTDCL NAME ;
    (5) statement -> . INTDCL NAME = expression ;
    (6) statement -> . FLOATDCL NAME ;
    (7) statement -> . FLOATDCL NAME = expression ;
    (8) statement -> . BOOLDCL NAME ;
    (9) statement -> . BOOLDCL NAME = boolexp ;
    (10) statement -> . WHILE ( boolexp ) { stmts }
    (11) statement -> . FOR ( statement boolexp ; statement ) { stmts }
    (12) statement -> . PRINT expression ;
    (13) statement -> . IF ( boolexp ) { stmts }
    (14) statement -> . IF ( boolexp ) { stmts } ELSE { stmts }
    (17) statement -> . IF ( boolexp ) { stmts } elifstatement ELSE { stmts }
    (18) statement -> . NAME = expression ;

    INTDCL          shift and go to state 4
    FLOATDCL        shift and go to state 6
    BOOLDCL         shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    PRINT           shift and go to state 10
    IF              shift and go to state 11
    NAME            shift and go to state 5

    prog                           shift and go to state 1
    stmts                          shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> prog .



state 2

    (1) prog -> stmts .

    $end            reduce using rule 1 (prog -> stmts .)


state 3

    (2) stmts -> statement . stmts
    (3) stmts -> statement .
    (2) stmts -> . statement stmts
    (3) stmts -> . statement
    (4) statement -> . INTDCL NAME ;
    (5) statement -> . INTDCL NAME = expression ;
    (6) statement -> . FLOATDCL NAME ;
    (7) statement -> . FLOATDCL NAME = expression ;
    (8) statement -> . BOOLDCL NAME ;
    (9) statement -> . BOOLDCL NAME = boolexp ;
    (10) statement -> . WHILE ( boolexp ) { stmts }
    (11) statement -> . FOR ( statement boolexp ; statement ) { stmts }
    (12) statement -> . PRINT expression ;
    (13) statement -> . IF ( boolexp ) { stmts }
    (14) statement -> . IF ( boolexp ) { stmts } ELSE { stmts }
    (17) statement -> . IF ( boolexp ) { stmts } elifstatement ELSE { stmts }
    (18) statement -> . NAME = expression ;

    $end            reduce using rule 3 (stmts -> statement .)
    }               reduce using rule 3 (stmts -> statement .)
    INTDCL          shift and go to state 4
    FLOATDCL        shift and go to state 6
    BOOLDCL         shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    PRINT           shift and go to state 10
    IF              shift and go to state 11
    NAME            shift and go to state 5

    statement                      shift and go to state 3
    stmts                          shift and go to state 12

state 4

    (4) statement -> INTDCL . NAME ;
    (5) statement -> INTDCL . NAME = expression ;

    NAME            shift and go to state 13


state 5

    (18) statement -> NAME . = expression ;

    =               shift and go to state 14


state 6

    (6) statement -> FLOATDCL . NAME ;
    (7) statement -> FLOATDCL . NAME = expression ;

    NAME            shift and go to state 15


state 7

    (8) statement -> BOOLDCL . NAME ;
    (9) statement -> BOOLDCL . NAME = boolexp ;

    NAME            shift and go to state 16


state 8

    (10) statement -> WHILE . ( boolexp ) { stmts }

    (               shift and go to state 17


state 9

    (11) statement -> FOR . ( statement boolexp ; statement ) { stmts }

    (               shift and go to state 18


state 10

    (12) statement -> PRINT . expression ;
    (19) expression -> . ( expression )
    (20) expression -> . expression + expression
    (21) expression -> . expression - expression
    (22) expression -> . expression * expression
    (23) expression -> . expression / expression
    (24) expression -> . expression ^ expression
    (33) expression -> . INUMBER
    (34) expression -> . FNUMBER
    (35) expression -> . boolexp
    (37) expression -> . NAME
    (25) boolexp -> . expression GT expression
    (26) boolexp -> . expression LT expression
    (27) boolexp -> . expression GE expression
    (28) boolexp -> . expression LE expression
    (29) boolexp -> . expression EQ expression
    (30) boolexp -> . expression NE expression
    (31) boolexp -> . boolexp AND boolexp
    (32) boolexp -> . boolexp OR boolexp
    (36) boolexp -> . BOOLVAL

    (               shift and go to state 20
    INUMBER         shift and go to state 21
    FNUMBER         shift and go to state 22
    NAME            shift and go to state 24
    BOOLVAL         shift and go to state 25

    expression                     shift and go to state 19
    boolexp                        shift and go to state 23

state 11

    (13) statement -> IF . ( boolexp ) { stmts }
    (14) statement -> IF . ( boolexp ) { stmts } ELSE { stmts }
    (17) statement -> IF . ( boolexp ) { stmts } elifstatement ELSE { stmts }

    (               shift and go to state 26


state 12

    (2) stmts -> statement stmts .

    $end            reduce using rule 2 (stmts -> statement stmts .)
    }               reduce using rule 2 (stmts -> statement stmts .)


state 13

    (4) statement -> INTDCL NAME . ;
    (5) statement -> INTDCL NAME . = expression ;

    ;               shift and go to state 27
    =               shift and go to state 28


state 14

    (18) statement -> NAME = . expression ;
    (19) expression -> . ( expression )
    (20) expression -> . expression + expression
    (21) expression -> . expression - expression
    (22) expression -> . expression * expression
    (23) expression -> . expression / expression
    (24) expression -> . expression ^ expression
    (33) expression -> . INUMBER
    (34) expression -> . FNUMBER
    (35) expression -> . boolexp
    (37) expression -> . NAME
    (25) boolexp -> . expression GT expression
    (26) boolexp -> . expression LT expression
    (27) boolexp -> . expression GE expression
    (28) boolexp -> . expression LE expression
    (29) boolexp -> . expression EQ expression
    (30) boolexp -> . expression NE expression
    (31) boolexp -> . boolexp AND boolexp
    (32) boolexp -> . boolexp OR boolexp
    (36) boolexp -> . BOOLVAL

    (               shift and go to state 20
    INUMBER         shift and go to state 21
    FNUMBER         shift and go to state 22
    NAME            shift and go to state 24
    BOOLVAL         shift and go to state 25

    expression                     shift and go to state 29
    boolexp                        shift and go to state 23

state 15

    (6) statement -> FLOATDCL NAME . ;
    (7) statement -> FLOATDCL NAME . = expression ;

    ;               shift and go to state 30
    =               shift and go to state 31


state 16

    (8) statement -> BOOLDCL NAME . ;
    (9) statement -> BOOLDCL NAME . = boolexp ;

    ;               shift and go to state 32
    =               shift and go to state 33


state 17

    (10) statement -> WHILE ( . boolexp ) { stmts }
    (25) boolexp -> . expression GT expression
    (26) boolexp -> . expression LT expression
    (27) boolexp -> . expression GE expression
    (28) boolexp -> . expression LE expression
    (29) boolexp -> . expression EQ expression
    (30) boolexp -> . expression NE expression
    (31) boolexp -> . boolexp AND boolexp
    (32) boolexp -> . boolexp OR boolexp
    (36) boolexp -> . BOOLVAL
    (19) expression -> . ( expression )
    (20) expression -> . expression + expression
    (21) expression -> . expression - expression
    (22) expression -> . expression * expression
    (23) expression -> . expression / expression
    (24) expression -> . expression ^ expression
    (33) expression -> . INUMBER
    (34) expression -> . FNUMBER
    (35) expression -> . boolexp
    (37) expression -> . NAME

    BOOLVAL         shift and go to state 25
    (               shift and go to state 20
    INUMBER         shift and go to state 21
    FNUMBER         shift and go to state 22
    NAME            shift and go to state 24

    boolexp                        shift and go to state 34
    expression                     shift and go to state 35

state 18

    (11) statement -> FOR ( . statement boolexp ; statement ) { stmts }
    (4) statement -> . INTDCL NAME ;
    (5) statement -> . INTDCL NAME = expression ;
    (6) statement -> . FLOATDCL NAME ;
    (7) statement -> . FLOATDCL NAME = expression ;
    (8) statement -> . BOOLDCL NAME ;
    (9) statement -> . BOOLDCL NAME = boolexp ;
    (10) statement -> . WHILE ( boolexp ) { stmts }
    (11) statement -> . FOR ( statement boolexp ; statement ) { stmts }
    (12) statement -> . PRINT expression ;
    (13) statement -> . IF ( boolexp ) { stmts }
    (14) statement -> . IF ( boolexp ) { stmts } ELSE { stmts }
    (17) statement -> . IF ( boolexp ) { stmts } elifstatement ELSE { stmts }
    (18) statement -> . NAME = expression ;

    INTDCL          shift and go to state 4
    FLOATDCL        shift and go to state 6
    BOOLDCL         shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    PRINT           shift and go to state 10
    IF              shift and go to state 11
    NAME            shift and go to state 5

    statement                      shift and go to state 36

state 19

    (12) statement -> PRINT expression . ;
    (20) expression -> expression . + expression
    (21) expression -> expression . - expression
    (22) expression -> expression . * expression
    (23) expression -> expression . / expression
    (24) expression -> expression . ^ expression
    (25) boolexp -> expression . GT expression
    (26) boolexp -> expression . LT expression
    (27) boolexp -> expression . GE expression
    (28) boolexp -> expression . LE expression
    (29) boolexp -> expression . EQ expression
    (30) boolexp -> expression . NE expression

    ;               shift and go to state 37
    +               shift and go to state 38
    -               shift and go to state 39
    *               shift and go to state 40
    /               shift and go to state 41
    ^               shift and go to state 42
    GT              shift and go to state 43
    LT              shift and go to state 44
    GE              shift and go to state 45
    LE              shift and go to state 46
    EQ              shift and go to state 47
    NE              shift and go to state 48


state 20

    (19) expression -> ( . expression )
    (19) expression -> . ( expression )
    (20) expression -> . expression + expression
    (21) expression -> . expression - expression
    (22) expression -> . expression * expression
    (23) expression -> . expression / expression
    (24) expression -> . expression ^ expression
    (33) expression -> . INUMBER
    (34) expression -> . FNUMBER
    (35) expression -> . boolexp
    (37) expression -> . NAME
    (25) boolexp -> . expression GT expression
    (26) boolexp -> . expression LT expression
    (27) boolexp -> . expression GE expression
    (28) boolexp -> . expression LE expression
    (29) boolexp -> . expression EQ expression
    (30) boolexp -> . expression NE expression
    (31) boolexp -> . boolexp AND boolexp
    (32) boolexp -> . boolexp OR boolexp
    (36) boolexp -> . BOOLVAL

    (               shift and go to state 20
    INUMBER         shift and go to state 21
    FNUMBER         shift and go to state 22
    NAME            shift and go to state 24
    BOOLVAL         shift and go to state 25

    expression                     shift and go to state 49
    boolexp                        shift and go to state 23

state 21

    (33) expression -> INUMBER .

    ;               reduce using rule 33 (expression -> INUMBER .)
    +               reduce using rule 33 (expression -> INUMBER .)
    -               reduce using rule 33 (expression -> INUMBER .)
    *               reduce using rule 33 (expression -> INUMBER .)
    /               reduce using rule 33 (expression -> INUMBER .)
    ^               reduce using rule 33 (expression -> INUMBER .)
    GT              reduce using rule 33 (expression -> INUMBER .)
    LT              reduce using rule 33 (expression -> INUMBER .)
    GE              reduce using rule 33 (expression -> INUMBER .)
    LE              reduce using rule 33 (expression -> INUMBER .)
    EQ              reduce using rule 33 (expression -> INUMBER .)
    NE              reduce using rule 33 (expression -> INUMBER .)
    )               reduce using rule 33 (expression -> INUMBER .)
    AND             reduce using rule 33 (expression -> INUMBER .)
    OR              reduce using rule 33 (expression -> INUMBER .)


state 22

    (34) expression -> FNUMBER .

    ;               reduce using rule 34 (expression -> FNUMBER .)
    +               reduce using rule 34 (expression -> FNUMBER .)
    -               reduce using rule 34 (expression -> FNUMBER .)
    *               reduce using rule 34 (expression -> FNUMBER .)
    /               reduce using rule 34 (expression -> FNUMBER .)
    ^               reduce using rule 34 (expression -> FNUMBER .)
    GT              reduce using rule 34 (expression -> FNUMBER .)
    LT              reduce using rule 34 (expression -> FNUMBER .)
    GE              reduce using rule 34 (expression -> FNUMBER .)
    LE              reduce using rule 34 (expression -> FNUMBER .)
    EQ              reduce using rule 34 (expression -> FNUMBER .)
    NE              reduce using rule 34 (expression -> FNUMBER .)
    )               reduce using rule 34 (expression -> FNUMBER .)
    AND             reduce using rule 34 (expression -> FNUMBER .)
    OR              reduce using rule 34 (expression -> FNUMBER .)


state 23

    (35) expression -> boolexp .
    (31) boolexp -> boolexp . AND boolexp
    (32) boolexp -> boolexp . OR boolexp

  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    ;               reduce using rule 35 (expression -> boolexp .)
    +               reduce using rule 35 (expression -> boolexp .)
    -               reduce using rule 35 (expression -> boolexp .)
    *               reduce using rule 35 (expression -> boolexp .)
    /               reduce using rule 35 (expression -> boolexp .)
    ^               reduce using rule 35 (expression -> boolexp .)
    GT              reduce using rule 35 (expression -> boolexp .)
    LT              reduce using rule 35 (expression -> boolexp .)
    GE              reduce using rule 35 (expression -> boolexp .)
    LE              reduce using rule 35 (expression -> boolexp .)
    EQ              reduce using rule 35 (expression -> boolexp .)
    NE              reduce using rule 35 (expression -> boolexp .)
    )               reduce using rule 35 (expression -> boolexp .)
    AND             shift and go to state 50
    OR              shift and go to state 51

  ! AND             [ reduce using rule 35 (expression -> boolexp .) ]
  ! OR              [ reduce using rule 35 (expression -> boolexp .) ]


state 24

    (37) expression -> NAME .

    ;               reduce using rule 37 (expression -> NAME .)
    +               reduce using rule 37 (expression -> NAME .)
    -               reduce using rule 37 (expression -> NAME .)
    *               reduce using rule 37 (expression -> NAME .)
    /               reduce using rule 37 (expression -> NAME .)
    ^               reduce using rule 37 (expression -> NAME .)
    GT              reduce using rule 37 (expression -> NAME .)
    LT              reduce using rule 37 (expression -> NAME .)
    GE              reduce using rule 37 (expression -> NAME .)
    LE              reduce using rule 37 (expression -> NAME .)
    EQ              reduce using rule 37 (expression -> NAME .)
    NE              reduce using rule 37 (expression -> NAME .)
    )               reduce using rule 37 (expression -> NAME .)
    AND             reduce using rule 37 (expression -> NAME .)
    OR              reduce using rule 37 (expression -> NAME .)


state 25

    (36) boolexp -> BOOLVAL .

    AND             reduce using rule 36 (boolexp -> BOOLVAL .)
    OR              reduce using rule 36 (boolexp -> BOOLVAL .)
    ;               reduce using rule 36 (boolexp -> BOOLVAL .)
    +               reduce using rule 36 (boolexp -> BOOLVAL .)
    -               reduce using rule 36 (boolexp -> BOOLVAL .)
    *               reduce using rule 36 (boolexp -> BOOLVAL .)
    /               reduce using rule 36 (boolexp -> BOOLVAL .)
    ^               reduce using rule 36 (boolexp -> BOOLVAL .)
    GT              reduce using rule 36 (boolexp -> BOOLVAL .)
    LT              reduce using rule 36 (boolexp -> BOOLVAL .)
    GE              reduce using rule 36 (boolexp -> BOOLVAL .)
    LE              reduce using rule 36 (boolexp -> BOOLVAL .)
    EQ              reduce using rule 36 (boolexp -> BOOLVAL .)
    NE              reduce using rule 36 (boolexp -> BOOLVAL .)
    )               reduce using rule 36 (boolexp -> BOOLVAL .)


state 26

    (13) statement -> IF ( . boolexp ) { stmts }
    (14) statement -> IF ( . boolexp ) { stmts } ELSE { stmts }
    (17) statement -> IF ( . boolexp ) { stmts } elifstatement ELSE { stmts }
    (25) boolexp -> . expression GT expression
    (26) boolexp -> . expression LT expression
    (27) boolexp -> . expression GE expression
    (28) boolexp -> . expression LE expression
    (29) boolexp -> . expression EQ expression
    (30) boolexp -> . expression NE expression
    (31) boolexp -> . boolexp AND boolexp
    (32) boolexp -> . boolexp OR boolexp
    (36) boolexp -> . BOOLVAL
    (19) expression -> . ( expression )
    (20) expression -> . expression + expression
    (21) expression -> . expression - expression
    (22) expression -> . expression * expression
    (23) expression -> . expression / expression
    (24) expression -> . expression ^ expression
    (33) expression -> . INUMBER
    (34) expression -> . FNUMBER
    (35) expression -> . boolexp
    (37) expression -> . NAME

    BOOLVAL         shift and go to state 25
    (               shift and go to state 20
    INUMBER         shift and go to state 21
    FNUMBER         shift and go to state 22
    NAME            shift and go to state 24

    boolexp                        shift and go to state 52
    expression                     shift and go to state 35

state 27

    (4) statement -> INTDCL NAME ; .

    INTDCL          reduce using rule 4 (statement -> INTDCL NAME ; .)
    FLOATDCL        reduce using rule 4 (statement -> INTDCL NAME ; .)
    BOOLDCL         reduce using rule 4 (statement -> INTDCL NAME ; .)
    WHILE           reduce using rule 4 (statement -> INTDCL NAME ; .)
    FOR             reduce using rule 4 (statement -> INTDCL NAME ; .)
    PRINT           reduce using rule 4 (statement -> INTDCL NAME ; .)
    IF              reduce using rule 4 (statement -> INTDCL NAME ; .)
    NAME            reduce using rule 4 (statement -> INTDCL NAME ; .)
    $end            reduce using rule 4 (statement -> INTDCL NAME ; .)
    }               reduce using rule 4 (statement -> INTDCL NAME ; .)
    BOOLVAL         reduce using rule 4 (statement -> INTDCL NAME ; .)
    (               reduce using rule 4 (statement -> INTDCL NAME ; .)
    INUMBER         reduce using rule 4 (statement -> INTDCL NAME ; .)
    FNUMBER         reduce using rule 4 (statement -> INTDCL NAME ; .)
    )               reduce using rule 4 (statement -> INTDCL NAME ; .)


state 28

    (5) statement -> INTDCL NAME = . expression ;
    (19) expression -> . ( expression )
    (20) expression -> . expression + expression
    (21) expression -> . expression - expression
    (22) expression -> . expression * expression
    (23) expression -> . expression / expression
    (24) expression -> . expression ^ expression
    (33) expression -> . INUMBER
    (34) expression -> . FNUMBER
    (35) expression -> . boolexp
    (37) expression -> . NAME
    (25) boolexp -> . expression GT expression
    (26) boolexp -> . expression LT expression
    (27) boolexp -> . expression GE expression
    (28) boolexp -> . expression LE expression
    (29) boolexp -> . expression EQ expression
    (30) boolexp -> . expression NE expression
    (31) boolexp -> . boolexp AND boolexp
    (32) boolexp -> . boolexp OR boolexp
    (36) boolexp -> . BOOLVAL

    (               shift and go to state 20
    INUMBER         shift and go to state 21
    FNUMBER         shift and go to state 22
    NAME            shift and go to state 24
    BOOLVAL         shift and go to state 25

    expression                     shift and go to state 53
    boolexp                        shift and go to state 23

state 29

    (18) statement -> NAME = expression . ;
    (20) expression -> expression . + expression
    (21) expression -> expression . - expression
    (22) expression -> expression . * expression
    (23) expression -> expression . / expression
    (24) expression -> expression . ^ expression
    (25) boolexp -> expression . GT expression
    (26) boolexp -> expression . LT expression
    (27) boolexp -> expression . GE expression
    (28) boolexp -> expression . LE expression
    (29) boolexp -> expression . EQ expression
    (30) boolexp -> expression . NE expression

    ;               shift and go to state 54
    +               shift and go to state 38
    -               shift and go to state 39
    *               shift and go to state 40
    /               shift and go to state 41
    ^               shift and go to state 42
    GT              shift and go to state 43
    LT              shift and go to state 44
    GE              shift and go to state 45
    LE              shift and go to state 46
    EQ              shift and go to state 47
    NE              shift and go to state 48


state 30

    (6) statement -> FLOATDCL NAME ; .

    INTDCL          reduce using rule 6 (statement -> FLOATDCL NAME ; .)
    FLOATDCL        reduce using rule 6 (statement -> FLOATDCL NAME ; .)
    BOOLDCL         reduce using rule 6 (statement -> FLOATDCL NAME ; .)
    WHILE           reduce using rule 6 (statement -> FLOATDCL NAME ; .)
    FOR             reduce using rule 6 (statement -> FLOATDCL NAME ; .)
    PRINT           reduce using rule 6 (statement -> FLOATDCL NAME ; .)
    IF              reduce using rule 6 (statement -> FLOATDCL NAME ; .)
    NAME            reduce using rule 6 (statement -> FLOATDCL NAME ; .)
    $end            reduce using rule 6 (statement -> FLOATDCL NAME ; .)
    }               reduce using rule 6 (statement -> FLOATDCL NAME ; .)
    BOOLVAL         reduce using rule 6 (statement -> FLOATDCL NAME ; .)
    (               reduce using rule 6 (statement -> FLOATDCL NAME ; .)
    INUMBER         reduce using rule 6 (statement -> FLOATDCL NAME ; .)
    FNUMBER         reduce using rule 6 (statement -> FLOATDCL NAME ; .)
    )               reduce using rule 6 (statement -> FLOATDCL NAME ; .)


state 31

    (7) statement -> FLOATDCL NAME = . expression ;
    (19) expression -> . ( expression )
    (20) expression -> . expression + expression
    (21) expression -> . expression - expression
    (22) expression -> . expression * expression
    (23) expression -> . expression / expression
    (24) expression -> . expression ^ expression
    (33) expression -> . INUMBER
    (34) expression -> . FNUMBER
    (35) expression -> . boolexp
    (37) expression -> . NAME
    (25) boolexp -> . expression GT expression
    (26) boolexp -> . expression LT expression
    (27) boolexp -> . expression GE expression
    (28) boolexp -> . expression LE expression
    (29) boolexp -> . expression EQ expression
    (30) boolexp -> . expression NE expression
    (31) boolexp -> . boolexp AND boolexp
    (32) boolexp -> . boolexp OR boolexp
    (36) boolexp -> . BOOLVAL

    (               shift and go to state 20
    INUMBER         shift and go to state 21
    FNUMBER         shift and go to state 22
    NAME            shift and go to state 24
    BOOLVAL         shift and go to state 25

    expression                     shift and go to state 55
    boolexp                        shift and go to state 23

state 32

    (8) statement -> BOOLDCL NAME ; .

    INTDCL          reduce using rule 8 (statement -> BOOLDCL NAME ; .)
    FLOATDCL        reduce using rule 8 (statement -> BOOLDCL NAME ; .)
    BOOLDCL         reduce using rule 8 (statement -> BOOLDCL NAME ; .)
    WHILE           reduce using rule 8 (statement -> BOOLDCL NAME ; .)
    FOR             reduce using rule 8 (statement -> BOOLDCL NAME ; .)
    PRINT           reduce using rule 8 (statement -> BOOLDCL NAME ; .)
    IF              reduce using rule 8 (statement -> BOOLDCL NAME ; .)
    NAME            reduce using rule 8 (statement -> BOOLDCL NAME ; .)
    $end            reduce using rule 8 (statement -> BOOLDCL NAME ; .)
    }               reduce using rule 8 (statement -> BOOLDCL NAME ; .)
    BOOLVAL         reduce using rule 8 (statement -> BOOLDCL NAME ; .)
    (               reduce using rule 8 (statement -> BOOLDCL NAME ; .)
    INUMBER         reduce using rule 8 (statement -> BOOLDCL NAME ; .)
    FNUMBER         reduce using rule 8 (statement -> BOOLDCL NAME ; .)
    )               reduce using rule 8 (statement -> BOOLDCL NAME ; .)


state 33

    (9) statement -> BOOLDCL NAME = . boolexp ;
    (25) boolexp -> . expression GT expression
    (26) boolexp -> . expression LT expression
    (27) boolexp -> . expression GE expression
    (28) boolexp -> . expression LE expression
    (29) boolexp -> . expression EQ expression
    (30) boolexp -> . expression NE expression
    (31) boolexp -> . boolexp AND boolexp
    (32) boolexp -> . boolexp OR boolexp
    (36) boolexp -> . BOOLVAL
    (19) expression -> . ( expression )
    (20) expression -> . expression + expression
    (21) expression -> . expression - expression
    (22) expression -> . expression * expression
    (23) expression -> . expression / expression
    (24) expression -> . expression ^ expression
    (33) expression -> . INUMBER
    (34) expression -> . FNUMBER
    (35) expression -> . boolexp
    (37) expression -> . NAME

    BOOLVAL         shift and go to state 25
    (               shift and go to state 20
    INUMBER         shift and go to state 21
    FNUMBER         shift and go to state 22
    NAME            shift and go to state 24

    boolexp                        shift and go to state 56
    expression                     shift and go to state 35

state 34

    (10) statement -> WHILE ( boolexp . ) { stmts }
    (31) boolexp -> boolexp . AND boolexp
    (32) boolexp -> boolexp . OR boolexp
    (35) expression -> boolexp .

    )               shift and go to state 57
    AND             shift and go to state 50
    OR              shift and go to state 51
    GT              reduce using rule 35 (expression -> boolexp .)
    LT              reduce using rule 35 (expression -> boolexp .)
    GE              reduce using rule 35 (expression -> boolexp .)
    LE              reduce using rule 35 (expression -> boolexp .)
    EQ              reduce using rule 35 (expression -> boolexp .)
    NE              reduce using rule 35 (expression -> boolexp .)
    +               reduce using rule 35 (expression -> boolexp .)
    -               reduce using rule 35 (expression -> boolexp .)
    *               reduce using rule 35 (expression -> boolexp .)
    /               reduce using rule 35 (expression -> boolexp .)
    ^               reduce using rule 35 (expression -> boolexp .)


state 35

    (25) boolexp -> expression . GT expression
    (26) boolexp -> expression . LT expression
    (27) boolexp -> expression . GE expression
    (28) boolexp -> expression . LE expression
    (29) boolexp -> expression . EQ expression
    (30) boolexp -> expression . NE expression
    (20) expression -> expression . + expression
    (21) expression -> expression . - expression
    (22) expression -> expression . * expression
    (23) expression -> expression . / expression
    (24) expression -> expression . ^ expression

    GT              shift and go to state 43
    LT              shift and go to state 44
    GE              shift and go to state 45
    LE              shift and go to state 46
    EQ              shift and go to state 47
    NE              shift and go to state 48
    +               shift and go to state 38
    -               shift and go to state 39
    *               shift and go to state 40
    /               shift and go to state 41
    ^               shift and go to state 42


state 36

    (11) statement -> FOR ( statement . boolexp ; statement ) { stmts }
    (25) boolexp -> . expression GT expression
    (26) boolexp -> . expression LT expression
    (27) boolexp -> . expression GE expression
    (28) boolexp -> . expression LE expression
    (29) boolexp -> . expression EQ expression
    (30) boolexp -> . expression NE expression
    (31) boolexp -> . boolexp AND boolexp
    (32) boolexp -> . boolexp OR boolexp
    (36) boolexp -> . BOOLVAL
    (19) expression -> . ( expression )
    (20) expression -> . expression + expression
    (21) expression -> . expression - expression
    (22) expression -> . expression * expression
    (23) expression -> . expression / expression
    (24) expression -> . expression ^ expression
    (33) expression -> . INUMBER
    (34) expression -> . FNUMBER
    (35) expression -> . boolexp
    (37) expression -> . NAME

    BOOLVAL         shift and go to state 25
    (               shift and go to state 20
    INUMBER         shift and go to state 21
    FNUMBER         shift and go to state 22
    NAME            shift and go to state 24

    boolexp                        shift and go to state 58
    expression                     shift and go to state 35

state 37

    (12) statement -> PRINT expression ; .

    INTDCL          reduce using rule 12 (statement -> PRINT expression ; .)
    FLOATDCL        reduce using rule 12 (statement -> PRINT expression ; .)
    BOOLDCL         reduce using rule 12 (statement -> PRINT expression ; .)
    WHILE           reduce using rule 12 (statement -> PRINT expression ; .)
    FOR             reduce using rule 12 (statement -> PRINT expression ; .)
    PRINT           reduce using rule 12 (statement -> PRINT expression ; .)
    IF              reduce using rule 12 (statement -> PRINT expression ; .)
    NAME            reduce using rule 12 (statement -> PRINT expression ; .)
    $end            reduce using rule 12 (statement -> PRINT expression ; .)
    }               reduce using rule 12 (statement -> PRINT expression ; .)
    BOOLVAL         reduce using rule 12 (statement -> PRINT expression ; .)
    (               reduce using rule 12 (statement -> PRINT expression ; .)
    INUMBER         reduce using rule 12 (statement -> PRINT expression ; .)
    FNUMBER         reduce using rule 12 (statement -> PRINT expression ; .)
    )               reduce using rule 12 (statement -> PRINT expression ; .)


state 38

    (20) expression -> expression + . expression
    (19) expression -> . ( expression )
    (20) expression -> . expression + expression
    (21) expression -> . expression - expression
    (22) expression -> . expression * expression
    (23) expression -> . expression / expression
    (24) expression -> . expression ^ expression
    (33) expression -> . INUMBER
    (34) expression -> . FNUMBER
    (35) expression -> . boolexp
    (37) expression -> . NAME
    (25) boolexp -> . expression GT expression
    (26) boolexp -> . expression LT expression
    (27) boolexp -> . expression GE expression
    (28) boolexp -> . expression LE expression
    (29) boolexp -> . expression EQ expression
    (30) boolexp -> . expression NE expression
    (31) boolexp -> . boolexp AND boolexp
    (32) boolexp -> . boolexp OR boolexp
    (36) boolexp -> . BOOLVAL

    (               shift and go to state 20
    INUMBER         shift and go to state 21
    FNUMBER         shift and go to state 22
    NAME            shift and go to state 24
    BOOLVAL         shift and go to state 25

    expression                     shift and go to state 59
    boolexp                        shift and go to state 23

state 39

    (21) expression -> expression - . expression
    (19) expression -> . ( expression )
    (20) expression -> . expression + expression
    (21) expression -> . expression - expression
    (22) expression -> . expression * expression
    (23) expression -> . expression / expression
    (24) expression -> . expression ^ expression
    (33) expression -> . INUMBER
    (34) expression -> . FNUMBER
    (35) expression -> . boolexp
    (37) expression -> . NAME
    (25) boolexp -> . expression GT expression
    (26) boolexp -> . expression LT expression
    (27) boolexp -> . expression GE expression
    (28) boolexp -> . expression LE expression
    (29) boolexp -> . expression EQ expression
    (30) boolexp -> . expression NE expression
    (31) boolexp -> . boolexp AND boolexp
    (32) boolexp -> . boolexp OR boolexp
    (36) boolexp -> . BOOLVAL

    (               shift and go to state 20
    INUMBER         shift and go to state 21
    FNUMBER         shift and go to state 22
    NAME            shift and go to state 24
    BOOLVAL         shift and go to state 25

    expression                     shift and go to state 60
    boolexp                        shift and go to state 23

state 40
